# csci357_final_project

./: .gitignore  AI_USAGE.md  README.md  pyproject.toml
best_model_archs/: deep_esn_gru_msft.pt  esn_msft.pt  esn_nvda.pt  gru_msft.pt  nvda_arch.pt  nvda_deep_esn_gru.pt  qcom_deep_gru_esn  qcom_deep_gru_esn.pt  qcom_esn.pt
notebooks/: ESN Exploration.ipynb  Ensemble Methods.ipynb  GRU Gated ESN.ipynb  Market Sentiment.ipynb  Report.ipynb
src/my_engine/: config.py  data.py  financial_data.py  model.py  ridge.py  sweep.py  text.py  trainer.py  utils.py
